Operations are added to the calculator

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="calculator-grid">
@@ -17,7 +17,7 @@
         <button data-all-clear class="span-two">AC</button>
         <button data-delete>DEL</button>
         <button data-operation>÷</button>
-        <button data-number>1</button>
+        <button data-number id="one">1</button>
         <button data-number>2</button>
         <button data-number>3</button>
         <button data-operation>*</button>
@@ -33,5 +33,6 @@
         <button data-number>0</button>
         <button data-equals class="span-two">=</button>
     </div>
+
 </body>
 </html>
